Closed Bug 1597865 Opened 5 years ago Closed 5 years ago

Fix do_QueryInterface to a RefPtr in DocumentChannel

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Fission Milestone M5
Tracking Status
firefox72 --- fixed

People

(Reporter: mattwoodrow, Assigned: jya)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

DocumentChannelParent::OnStartRequest has a do_QueryInterface call writing to a RefPtr, we should fix this.

Priority: -- → P2
Whiteboard: [necko-triaged]

Blocks Fission dogfooding (M5).

Fission Milestone: --- → M5

I fixed this in bug 1584031.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Assignee: nobody → jyavenard

misread. I had just done it :(

Assignee: jyavenard → nobody

There's plenty of those left so will push my changes still.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Use QueryObject instead. Some variable renaming to make it clearer we are dealing with a http channel.

Assignee: nobody → jyavenard
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5d8ab075ccbf Fix do_QueryInterface to a RefPtr in DocumentChannel. r=mattwoodrow,mayhemer.
Status: REOPENED → RESOLVED
Closed: 5 years ago5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: