Bug 1597865 - Fix do_QueryInterface to a RefPtr in DocumentChannel. r=mattwoodrow,mayhemer.

Use QueryObject instead. Some variable renaming to make it clearer we are dealing with a http channel.

Differential Revision: https://phabricator.services.mozilla.com/D55238